# attention-surgery

./: README.md  pyproject.toml  requirements.in
attention_surgery/models/: __init__.py  qwen3.py
attention_surgery/ops/: dynamic_tanh.py  sigmoid_attention.py
attention_surgery/trainers/: __init__.py  distillation_trainer.py  hf_dataset.py
attention_surgery/utils/: __init__.py  lora_utils.py  module_collector.py  module_surgery.py
docs/: qwen3.md
examples/: qwen3_replacement.py  simple_replacement.py  train_sigmoid_attention.py  train_with_alpaca.py
src/models/: llama3.py
src/modules/: sigmoid_attention.py
