[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attention-surgery"
version = "0.1.0"
description = "Tools for replacing and modifying attention mechanisms in transformer models"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.9.0",
    "transformers>=5.0.0rc0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["attention_surgery", "attention_surgery.*"]
